# crypto-broker-rest-api

./: .gitignore  Cargo.toml  Dockerfile  api.md  config.yaml  schema.sql
docs/: openapi.yaml
src/: config.rs  datetime_formatters.rs  main.rs  perf.rs  persistence.rs  types.rs
src/api/: routes.rs  types.rs
src/middlewares/: apikey.rs  error.rs  mod.rs
