[package]
name = "my-program"
version = "0.1.0"
authors = ["runner"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
# https://docs.serde.rs/serde_yaml/index.html
serde_yaml = "0.8"
# tokio postgres docs are garbage so just look at  postgres 90% of the time https://docs.rs/postgres/0.15.2/postgres/
tokio-postgres = {version = "0.7.2", features = ["with-chrono-0_4","runtime"]}
# https://actix.rs/docs/getting-started/
actix-web = "4.0.0-beta.9"
# https://docs.rs/chrono/0.4.19/chrono/
chrono = "0.4.19"
tokio = {version = "1", features = ["full"] }

rust_decimal = {version = "1.16.0", features = ["db-tokio-postgres","serde-float"]}